--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Prociono&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,7 +44,7 @@
                     class="feature-images-3" src="./images/team3.png" alt=""><img src="./images/team4.png" alt="">
             </div>
             <div class="feature-content">
-                <h3><span>Quick list</span> of Our <span>Features</span></h3>
+                <h3><span class="quick-list">Quick list</span> of Our <span class="features-span">Features</span></h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="explore-btn">Explore More</button>
@@ -137,26 +140,29 @@
             </div>
 
         </section>
-        
+
 
         <section>
             <div>
 
                 <h1 class="sponspors-banner">Our Sponspors</h1>
-                <p class="sponspors-banner">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="sponspors-banner">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
 
             </div>
             <div class="sponspors-icons">
-               <img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/telerama.png" alt=""><img src="./images/sponsors/figma.png" alt="">
+                <img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/amazon.png" alt=""><img
+                    src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/telerama.png" alt=""><img
+                    src="./images/sponsors/figma.png" alt="">
             </div>
-            
+
 
 
         </section>
     </main>
-<footer>
-    <p>All rights reserved copyright@2023 startup landing page design</p>
-</footer>
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 
 
 
