--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <section class=" experience-banner">
             <div class="experience-content-enjoy">
-                <h2>Features you will love & enjoy</h2>
+                <h2 class="experience-title">Features you will love &<br/> enjoy</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
 
@@ -95,9 +95,9 @@
                 <img src="./images/architect.png" alt="">
             </div>
 
-
-            <button class="explore-btn" id="btn">10+ Year Experience</button>
+            
         </section>
+        <div  id="btn"><h1>10+ Year </h1><p>Experience</p></div>
 
 
 
